# react-native-math-expo

./: README.md  app.json  metro.config.js  package-lock.json  package.json
app/: _layout.tsx
app/(main)/: _layout.tsx  index.tsx
app/(tabs)/: index.tsx
ios/: Podfile
ios/reactnativemathexpo/: Info.plist
ios/reactnativemathexpo.xcodeproj/: project.pbxproj
ios/reactnativemathexpo.xcodeproj/xcshareddata/xcschemes/: reactnativemathexpo.xcscheme
package/: NitroMath.podspec  package.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/src/main/java/com/margelo/nitro/math/: NitroMathPackage.java
package/cpp/: HybridMath.cpp  HybridMath.hpp  cutils_wrapper.hpp  utils.c  utils.h
package/src/: index.ts
package/src/specs/: Math.nitro.ts
patches/: react-native-nitro-modules+0.22.1.patch
scripts/: postinstall.sh
